--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ hr{
     width: 60%;
     margin-left: 16px;
     margin-right: 16px;
+    margin-bottom: 10px;
     background-color: white;
 }
 
