--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     margin: 0;
     padding: 0;
     font-family: "Roboto"; sans-serif;
+    font-size: 12px;
     scroll-behavior: smooth;
     background-color: rgb(0, 0, 0);
 }
