--- a/style.css
+++ b/style.css
@@ -216,7 +216,8 @@ hr{
 
 footer{
     text-align: center;
-    padding: 16px;
+    padding: 32px;
+    font-size: 7px;
     background-color: #390041;
     color: white;
 }
